--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -14,6 +14,7 @@
 
       <input
         #newAmount
+        name="RUB"
         [(ngModel)]="amount"
         (ngModelChange)="changeAmount(newAmount.value)"
         class="amount_input"
